# tingan

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CITATION.cff  LICENSE.md  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  question.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: docs.yml  linting.yml  tests.yml
docs/: api.md  contributing.md
scripts/: __init__.py  config.yaml  gan_test.py  training_set_from_gp.py
scripts/configs/: basic_test_config.yaml
src/tingan/: __init__.py  datasets.py  gan_test.py  gp_rednoise.py  networks.py  plots.py  utils.py
src/tingan/_tests/: __init__.py  fake_data.py
tests/: conftest.py  test_gp_rednoise.py
tests/fixtures/: general.py  pulsars.py
tests/test__tests/: test_fake_pulsar_data.py
